WebContent/stylesheet.css
html {
    height: 100%;
}

body {
    background-color: #32424e;
    margin: 0;
    height: 100%;
    
}

#container {
    position: relative;
    min-height: 100%;
    margin-bottom: -50px;
}

#header {
	z-index: 1;
	position: fixed;
	width: 100%;
    height: 60px;
	background-color: #000000;

}

#title {
    color: #FFFFFF;
    font-family: Verdana, sans-serif;
    font-size: 45px;
    margin-left: 10px;
    width: 300px;
    float: left;
}

#navbar {
    color: #FFFFFF;
    font-family: Verdana, sans-serif;
    float: right;
    margin-right: 10px;
}

#navbar a {
    color: #FFFFFF;
}

.clearheader {
    height: 70px;
    clear: both;
}

#body {
    position: relative;
    margin: auto;
    border: 1px solid;
    border-radius: 5px;
    margin-bottom: 10px;
	max-width: 800px;
	height: 100%;
	background-color: #FFFFFF;
    padding-top: 10px;
    padding-bottom: 10px;
    overflow: hidden;
}
#body div {
	float: left;
}

.edit-add {
	text-align: center;
	color: #ffffff;
}
.edit-add img {
	padding-left: 0px;
}

#body p {
	margin-left: 5px;
	margin-right: 5px;
	font-family: Verdana, sans-serif;
	color: #000000;
}

a {
    text-decoration: none;
}

.indent { padding-left: 20px; }

img { padding-left: 20px; }

h4 {
    margin-top: 10px;
	margin-left: 5px;
	margin-bottom: 15px;
	font-family: Verdana, sans-serif;
}

.button {
	width:15%;
	float: left;

	margin-left:32%;
	margin-right: -27%;
	display:block;
	margin-top:10%;
	margin-bottom: 0%;
}
.button-circle {
	width: 100%;
	height:0;
	padding-bottom: 100%;
    border-radius: 50%;
	border:10px solid #cfdcec;
    overflow:hidden;

    background: #4679BD; 
    box-shadow: 0 0 3px gray;
}
.button-circle:hover {
	background:#30588e;
}
.button a {
    display:block;
	float:left;
	width:100%;
	padding-top:50%;
    padding-bottom:50%;
	line-height:1em;
	margin-top:-0.5em;
    text-align: center;
	margin-left: 0%;

	color:#e2eaf3;
    font-family:Verdana;
    font-size:1.2em;
    font-weight:bold;
    text-decoration:none;
}

#align-vert {
	margin-top: -10%;
}

.clearfooter {
height: 50px;
clear: both;
}

#footer {
	position: relative;
    bottom: 0;
	height: 50px;
    width: 100%;
	background-color: #000000;
	font-family: Verdana, sans-serif;
	font-size: 14px;
	text-align: center;
	color: #ffffff;
}

